# nockchain

./: Cargo.toml  DEPLOYMENT_GUIDE.md  EPYC_OPTIMIZATION_SUMMARY.md  EPYC全速编译指南.md  EPYC服务器使用指南.md  QUICK_START.md  README.md  ROOT用户使用说明.md  github_integration.sh  nockchain_optimization_analysis.md  optimize_epyc_system.sh  optimized_cargo_config.toml  optimized_mining.rs  quick_start_guide.md  优化文件提交清单.md  优化部署完成说明.md  新手完整教程.md  极简新手指南.md  逐步详细教程.md
crates/nockchain/: Cargo.toml
docs/: EPYC_OPTIMIZATION.md
scripts/: complete_dependency_fix.sh  epyc_mining_setup.sh  epyc_mining_setup_root.sh  epyc_mining_setup_root_fixed.sh  epyc_turbo_compile.sh  fix_all_dependencies.sh  fix_cargo_manifest.sh  fix_compilation_issue.sh  quick_fix_duplicates.sh  verify_optimization.sh
