# Nockchain 性能优化配置
# 针对 AMD EPYC 服务器优化

[workspace]
members = [
    "crates/equix-latency",
    "crates/kernels", 
    "crates/hoonc",
    "crates/hoon",
    "crates/nockapp",
    "crates/nockchain-libp2p-io",
    "crates/nockchain",
    "crates/nockvm/rust/ibig",
    "crates/nockvm/rust/murmur3", 
    "crates/nockvm/rust/nockvm_macros",
    "crates/nockvm/rust/nockvm",
    "crates/nockchain-wallet",
    "crates/zkvm-jetpack",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# ===== 性能优化配置 =====
[profile.release]
opt-level = 3                    # 最高优化级别
lto = "fat"                      # 启用链接时优化
codegen-units = 1                # 单个代码生成单元以获得最佳优化
panic = "abort"                  # 减少二进制大小和提高性能
debug = false                    # 禁用调试信息
rpath = false                    # 禁用rpath
strip = true                     # 剥离符号表

[profile.release-with-debug]
inherits = "release"
debug = true                     # 保留调试信息的发布版本

# 针对特定目标的优化配置
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

# 开发时的快速编译配置
[profile.dev]
opt-level = 0
debug = true
incremental = true

# ===== 性能优化依赖 =====
[workspace.dependencies]
# 高性能内存分配器
jemallocator = "0.5"
mimalloc = "0.1"

# SIMD 和并行计算
rayon = "1.8"
wide = "0.7"
num_cpus = "1.16"

# 性能分析工具
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"] }

# 原有依赖保持不变
hoonc = { path = "crates/hoonc" }
nockapp = { path = "crates/nockapp" }
ibig = { path = "crates/nockvm/rust/ibig" }
kernels = { path = "crates/kernels" }
murmur3 = { path = "crates/nockvm/rust/murmur3" }
nockchain = { path = "crates/nockchain" }
nockchain-libp2p-io = { path = "crates/nockchain-libp2p-io" }
nockvm = { path = "crates/nockvm/rust/nockvm" }
nockvm_crypto = { path = "crates/nockvm/rust/nockvm_crypto" }
nockvm_macros = { path = "crates/nockvm/rust/nockvm_macros" }
nockchain-wallet = { path = "crates/nockchain-wallet" }
zkvm-jetpack = { path = "crates/zkvm-jetpack" }

# 高性能依赖版本
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"

# 缺失的依赖项
equix = "0.1"
rand = "0.8"
futures = "0.3"
bs58 = "0.5"
bitcoincore-rpc = "0.18"
tempfile = "3.8"
termcolor = "1.4"
tracing-test = "0.2"
tikv-jemallocator = "0.5"

# 钱包相关依赖
crossterm = "0.27"
either = "1.9"
getrandom = "0.2"
ratatui = "0.25"
termimad = "0.25"
thiserror = "1.0"

# zkvm-jetpack 依赖
argon2 = "0.5"
arrayref = "0.3"
bytes = "1.5"
hex-literal = "0.4"
num-traits = "0.2"
quickcheck = "1.0"
smallvec = "1.11"
strum = "0.25"
bitvec = "1.0"

# 可观测性依赖
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
tonic = "0.10"
tracing-opentelemetry = "0.22"
blake3 = "1.5"
sha2 = "0.10"

# 序列化和编码依赖
bincode = "1.3"
byteorder = "1.5"
chrono = "0.4"
config = "0.13"
serde_json = "1.0"

# 系统和网络依赖
dirs = "5.0"
async-trait = "0.1"
axum = "0.7"
signal-hook = "0.3"
signal-hook-tokio = "0.3"
tokio-util = "0.7"
tower-http = "0.5"
yaque = "0.6"
intmap = "0.7"
gnort = "0.1"

# TLS 和证书相关
axum-server = "0.6"
instant-acme = "0.5"
rcgen = "0.12"
rustls = "0.22"
rustls-pemfile = "1.0"
tokio-rustls = "0.25"
webpki-roots = "0.26"
x509-parser = "0.15"

# 构建工具依赖
vergen = "8.2"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

# 网络相关优化依赖
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "da0017ee887a868e231ed78c7de892779c17800d" }

# 测试和基准测试工具  
testcontainers = { git = "https://github.com/bitemyapp/testcontainers-rs.git", rev = "54851fd9faf9b9cded9d681b46f87c056880d870" }

# ===== 编译时特性标志优化 =====
# 注意：features 部分已移动到具体的包中 (crates/nockchain/Cargo.toml)
# 工作区清单不支持直接定义 features

# 目标特定的配置已移动到具体的包中
# 工作区清单不支持 target 特定的依赖项

# ===== 自定义任务配置 =====
[alias]
bench-all = "bench --workspace"
build-optimized = "build --release --features optimized"
profile = "build --release --features profiling"
mine-epyc = "run --release --features optimized --bin nockchain"
